<resources>
    <string name="app_name">Ribbit2</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="passwr_hint">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_error_message">Please make sure you enter username, password and email.</string>
    <string name="signup_error_title">Oooops!</string>
    <string name="login_error_message">Please make sure you enter username and password.</string>
    <string name="login_error_title">Oooops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="empty_inbox">No new messages.</string>
    <string name="empty_friends_list">No Firends in the list.</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edi_friends">Edit Friends</string>

    <string name="hello_world">Hello world!</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="title_activity_test">Test ban</string>
    <string name="title_activity_edit_my_friends">Edit Friends</string>
    <string name="title_activity_testing_blank_frag">TestingBlankFrag</string>
    <string name="title_activity_friend_edtion">FriendEdtion</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_change_friends">Change Friends</string>
    <string name="title_activity_linkmy_edit_users">Linkmy EditUsers</string>
    <string name="title_activity_rabuda">Rabuda</string>
    <string name="menu_camera_label">Camera</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="erro_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">"Sorry there was an error!"</string>
    <string name="video_file_size_warning">The selected video must less than 10MB!</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">Select file is too large! Select a new file</string>
    <string name="title_activity_recipients">Choose Recipentes</string>
    <string name="empty_recipient_str_msg">Choose some friends first</string>
    <string name="title_activity_choose_friend">ChooseFriend</string>
    <string name="action_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the file selected please select a different  file</string>
    <string name="error_selecting_file_title">We are sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message, please try again.</string>

</resources>
